# 2048

./: CMakeLists.txt  README.md  main.cpp  test.cpp
game/: Menu.cpp  Menu.hpp  board.cpp  board.hpp  game.cpp  game.hpp  highscore.hpp  menu.cpp  menu.hpp
io/: io.hpp  termio.cpp  termio.hpp
utils/: matrix.hpp  matrix_iterator.hpp  matrix_views.hpp  modulo_counter.hpp  ring.hpp  strided_iterator.hpp  utils.hpp
